--- a/worker/elm.cabal
+++ b/worker/elm.cabal
@@ -132,7 +132,8 @@ Executable worker
         Parse.Symbol
         Parse.Type
         Parse.Variable
-        Paths_elm
+        -- Paths_elm
+        Paths_krueger
         Repl
         Reporting
         Reporting.Annotation
